# bot

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  bot.py  pyproject.toml  requirements.txt
data/: keywords.json
docs/: api_analysis.md
src/plugins/admin/: __init__.py
src/plugins/auto_order/: __init__.py  api_client.py  browser.py
src/plugins/database/: __init__.py  models.py
src/plugins/payment/: __init__.py  signing.py  webhook.py
src/plugins/qa/: __init__.py  ai_chat.py  keywords.py  mode_router.py
src/plugins/video_report/: __init__.py  douyin_browser.py  service.py  workflow.py
tests/: test_admin_commands.py  test_database_models.py  test_ldxp_api_client.py  test_manual_payment_flow.py  test_payment_signing.py  test_qa_mode_router.py  test_video_report_workflow.py
